--- a/index.html
+++ b/index.html
@@ -6,7 +6,55 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     
+    <div id="main">
+        <header>
+            <a href="" class="headertext">Header logo</a>
+            <nav class="links">
+                <ul>
+                    <li><a href="">header link one</a></li>
+                    <li><a href="">header link two</a></li>
+                    <li><a href="">header link three</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <div id="Hero">
+            <div>
+                <p class="HeroMain">This website is<br>awesome</p>
+                <p class="HeroSecondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <button class="button">Sign up</button>
+            </div>
+            <img src="" alt="placeholder" class="placeholder">
+        </div>
+    </div>
+
+    <div id="information">
+        <p id="infotext">Some random information</p>
+        <div class="infobox">
+            <div class="content">
+                <div class="box"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="content">
+                <div class="box"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="content">
+                <div class="box"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+            <div class="content">
+                <div class="box"></div>
+                <p>This is some subtext under an illustration or image</p>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
