--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p class="HeroSecondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button class="button">Sign up</button>
             </div>
-            <img src="" alt="placeholder" class="placeholder">
+            <img src="placeholder.png" alt="placeholder" class="placeholder">
         </div>
     </div>
 
@@ -53,8 +53,24 @@
         </div>
     </div>
 
-    <footer>
+    <div id="quote">
+        <div class="quotetext">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is <br>that it looks nice.</div>
+        <p class="quoteauthor">-Thor, God of Thunder</p>
+    </div>
 
+    <div id="call">
+        <div id="callbox">
+            <div>
+                <p style="font-weight: 900;">Call to action! It's time!</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <div>
+                <button class="button" style="font-weight: 700;">Sign up</button>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div>Openright duxxie 2025</div>
     </footer>
 </body>
 </html>
