--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
         <div class="infobox">
             <div class="content">
                 <div class="box"></div>
-                <p>This is some subtext under an illustration or image</p>
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="content">
                 <div class="box"></div>
-                <p>This is some subtext under an illustration or image</p>
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="content">
                 <div class="box"></div>
-                <p>This is some subtext under an illustration or image</p>
+                <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="content">
                 <div class="box"></div>
-                <p>This is some subtext under an illustration or image</p>
+                <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
     </div>
@@ -61,7 +61,7 @@
     <div id="call">
         <div id="callbox">
             <div>
-                <p style="font-weight: 900;">Call to action! It's time!</p>
+                <p style="font-weight: 700;">Call to action! It's time!</p>
                 <p>Sign up for our product by clicking that button right over there!</p>
             </div>
             <div>
