--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p class="HeroSecondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
                 <button class="button">Sign up</button>
             </div>
-            <img src="placeholder.png" alt="placeholder" class="placeholder">
+            <img src="placeholding.png" alt="placeholding" class="placeholding">
         </div>
     </div>
 
